add user data endpoint
